# trainweights

./: CMakeLists.txt  README.md  example.py  pyproject.toml  setup.py
examples/: example.py  for_readme.py
src/: logger.cpp  logger.h  serialize.cpp  serialize.h  tensor.cpp  tensor.h  trainweights.cpp  types.cpp  types.h
src/tests/: test_ndarray.cpp
trainweights/: __init__.py  io.py
